# sha1-smol

./: Cargo.toml  Justfile  Makefile  README.md  upload-docs.sh
.github/workflows/: tests.yml
bench/: Cargo.toml  bench.rs
benches/: mod.rs
legacy-shim/: Cargo.toml
src/: lib.rs  simd.rs
